Improve copiing event

--- a/alpha/cityfusion_admin/templates/actions/actions.html
+++ b/alpha/cityfusion_admin/templates/actions/actions.html
@@ -1,8 +1,8 @@
 {% if request.user.is_staff %}
 <div class="cfadmin-actions">
-	<a href="{% url 'event_edit' event.authentication_key %}">edit</a>
-	<a href="{% url 'event_remove' event.authentication_key %}" class="danger-action">remove</a>	
+	<a href="{% url 'event_copy' event.authentication_key %}">Copy</a>
+	<a href="{% url 'event_edit' event.authentication_key %}">Edit</a>
+	<a href="{% url 'event_remove' event.authentication_key %}" class="danger-action">Remove</a>	
 	<a href="{% url 'admin_setup_featured' event.event_identifier %}">Make featured</a>
 </div>
-
 {% endif %}
