Add default width for images in searchpad

--- a/alpha/event/static/styles/browse/event_details.css
+++ b/alpha/event/static/styles/browse/event_details.css
@@ -9,7 +9,7 @@
     margin: 13px;
 }
 
-.event-details-block .event-img image{
+.event-details-block .event-img img{
     width: 175px;
     height: 175px;
 }
