--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -31,13 +31,15 @@
                 </ul>
             </div>
         </div>
-        
-        <div class="search-label">Search For : </div>
-         <div class="search-selection-wrapper">
-            <div class="search-text-box">
-                <input class="search" type="text" name="search" value="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)">
-                <div class="search-submission"></div>
-                <div class="clr"></div>
+
+        <div class="search-wrapper">
+            <div class="search-label">Search For : </div>
+            <div class="search-selection-wrapper">
+                <div class="search-text-box">
+                    <input class="search" type="text" name="search" value="(e.g. jazz, Zumanity, Coldplay)" onBlur="onBlur(this)" onFocus="onFocus(this)">
+                    <div class="search-submission"></div>
+                    <div class="clr"></div>
+                </div>
             </div>
         </div>
         </form>
