--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -203,7 +203,7 @@
             <table class="secondary-content-table" celpadding="0" cellspacing="0">
                 <tbody>
                     <tr>
-                        <th>Date</th>
+                        <th class="secondary-content-table-date">Date</th>
                         <th>Time</th>
                         <th>Event</th>
                     </tr>                    
