--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -53,7 +53,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <a href="javascript:void;" class="action-facebook-like">                                
+                            <a href="javascript:void(0);" class="action-facebook-like">
                                 <div href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>                                
                             </a>
                         </td>
