Add counter for tax numbers on post event page

--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -463,8 +463,13 @@
                                         <div class="tags-container"></div>
                                         <div class="close-button">Close</div>
                                     </div>
-                                </div>
+                                </div>                                
                                 {{form.tags}}
+                                <span class="tags-counter-container">
+                                    <span class="tags-counter">
+                                        0
+                                    </span> of 10 (Max 10 Tags)
+                                </span>
                             </td>                                            
                         </tr>
                         <tr>
