fix bug with remind-me link

--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -43,7 +43,7 @@
                     {% endif %}
                     <tr>                        
                         <td>
-                            <a href="javascript:void()" class="action-remind-me" data-event-id="{{ event.event.id }}">Remind Me</a>
+                            <a href="javascript:void(0);" class="action-remind-me" data-single-event-id="{{ event.id }}">Remind Me</a>
                             {% remind_me_popup event %}
                         </td>
                         <td class="in-the-loop-td">
