--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -119,7 +119,8 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="javascript:void;" class="action-facebook-like accented">                                
+                                    <iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Flocalhost%3A8000%2Fevents%2Fview%2Fnewevent12345%2F&amp;width=450&amp;height=21&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=536513936402579" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+                                    <a href="javascript:void(0);" class="action-facebook-like accented">
                                         <div 
                                             href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" 
                                             class="fb-like" 
