Fix facebook for turbolinks script

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -10,7 +10,7 @@
     <link href="{{STATIC_URL}}styles/browse/featured_events.css" rel="stylesheet" type="text/css" />
 
     <script type="text/javascript" src="{{STATIC_URL}}turbolinks/turbolinks.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}js/facebook-for-turbolinks.js"></script>
+    <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
     
     <script src="{{STATIC_URL}}js/browse/browse-page.js" type="text/javascript"></script>
 {% endblock %}
