--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -29,7 +29,7 @@
     <link href="{{STATIC_URL}}styles/event/conversation.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
 
-    <script type="text/javascript" src="{{STATIC_URL}}js/facebook-for-turbolinks.js"></script>
+    <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>        
     <script>
