--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -3,6 +3,8 @@
 <head>
     {% load analytics %}
     {% googleanalyticsjs %}
+    <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
+    
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>City Fusion</title>
     
