--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang='en_US'>
 <head>
     {% load analytics %}
+    {% load common_tags %}
     {% googleanalyticsjs %}
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -124,9 +125,7 @@
                     <li><a href="{% url 'staticpage' alias='privacy_policy' %}">Privacy Policy</a></li>
                     <li class="last"><a href="{% url 'staticpage' alias='terms_of_service' %}">Terms of Service</a></li>
                     <li class="last">
-                        <a href="javascript:void(0);" class="action-facebook-like">
-                            <div href="http://{{ request.META.HTTP_HOST }}" class="fb-like" data-href="http://{{ request.META.HTTP_HOST }}" data-send="false" data-layout="button_count" data-width="20" data-show-faces="false" data-font="arial"></div>
-                        </a>
+                        {% like_button request.META.HTTP_HOST %}
                     </li>
                     <li class="last">
                         <a href="#" class="footer-icon facebook"></a>
