--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -19,11 +19,14 @@
     <link href="{{ STATIC_URL }}css/facebook.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
 
+    <!--[if lt IE 9]>
+        <script type="text/javascript" src="{{STATIC_URL}}js/libs/ie9.js"></script>
+    <![endif]-->
+
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-migrate-1.2.1.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
 
     {% include 'variables.html' %}
