Add bind method for all browser that do not support it

--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -23,6 +23,8 @@
         <script type="text/javascript" src="{{STATIC_URL}}js/libs/ie9.js"></script>
     <![endif]-->
 
+    <script type="text/javascript" src="{{STATIC_URL}}js/libs/js_api.js"></script>
+
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-migrate-1.2.1.js"></script>
