Trying selectvizr to support :checked pseudoselector in ie8

--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -20,6 +20,9 @@
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
 
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/js_api.js"></script>
+    <!--[if (gte IE 6)&(lte IE 8)]>
+        <script type="text/javascript" src="{{STATIC_URL}}js/libs/selectivizr-min.js"></script>
+    <![endif]-->
 
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}date/js/jquery-1.9.1.min.js"></script>
