--- a/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
+++ b/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
@@ -8,11 +8,10 @@
             <th class="action">Campaign Name</th>
             <th class="action">Owner</th>
             <th class="action">Ads(Impressions/Clicks), CPC, CPM</th>
-            <th class="action">Spent</th>
-            <th class="action">Remain</th>
+            <th class="action">Amount Spent</th>
+            <th class="action">Amount Remaining</th>
             <th class="action">Regions</th>
-            <th class="action">Edit</th>
-            <th class="action">Remove</th>
+            <th class="action">Actions</th>
         </tr>        
         {% for campaign in campaigns %}
         <tr>
@@ -25,6 +24,7 @@
             <td class="action">
                 {% for ad in campaign.advertising_set.all %}
                     <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">
+                        <img width="30" src="/media/{{ ad.image }}" alt="" />
                         {{ ad.ad_type.name }} {{ ad.ad_type.width }}x{{ ad.ad_type.height }}
                     </a>({{ ad.views }}/{{ ad.clicks }}), {{ ad.cpc_price }}, {{ ad.cpm_price }}
                     <br/>
@@ -44,12 +44,10 @@
             </td>
             <td class="action">
                 <a href="{% url 'admin_advertising_edit_campaign' campaign.id %}">
-                    Edit
+                    <img src="/static/images/edit-icon.png"/>
                 </a>
-            </td>
-            <td class="action">
                 <a href="{% url 'admin_advertising_remove_campaign' campaign.id %}" class="danger">
-                    Remove
+                    <img src="/static/images/delete-icon.png"/>
                 </a>
             </td>
         </tr>
