--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -19,6 +19,10 @@
     <link href="{{ STATIC_URL }}css/facebook.css" type="text/css" rel="stylesheet" media="all" />
     <link href="{{ STATIC_URL }}styles/accounts/signin_signup.css" type="text/css" rel="stylesheet" media="all" />
 
+    <!--[if IE]>
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}styles/ie-only.css" />
+    <![endif]-->
+
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/js_api.js"></script>
     <!--[if (gte IE 6)&(lte IE 8)]>
         <script type="text/javascript" src="{{STATIC_URL}}js/libs/selectivizr-min.js"></script>
