--- a/alpha/event/static/styles/widgets.css
+++ b/alpha/event/static/styles/widgets.css
@@ -117,7 +117,12 @@ div.radio label{
 }
 
 input[type=checkbox] {
-    display: none !important;    
+    width: 0;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
 }
 
 input[type=checkbox] + label {
@@ -137,7 +142,12 @@ input[type=checkbox]:checked + label:after {
 }
 
 input[type=radio] {
-  display: none !important;
+    width: 0;
+    height: 0;
+    opacity: 0;
+    position: absolute;
+    padding: 0;
+    margin: 0;
 }
 input[type=radio] + label {
     display: inline-block;
