bit advertising styles correcting

--- a/alpha/event/static/styles/profile-table.css
+++ b/alpha/event/static/styles/profile-table.css
@@ -130,4 +130,10 @@ a.add-button {
 
 .ads-thumb {
     float: left;
+    margin-right: 2px;
+}
+
+.advertising-items {
+    clear: both;
+    padding: 4px 0;
 }
