--- a/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
+++ b/alpha/advertising/templates/advertising/stats/admin-advertising-campaigns.html
@@ -23,13 +23,14 @@
             </td>
             <td class="action">
                 {% for ad in campaign.advertising_set.all %}
-                    <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">
-                        <img class="ads-thumb" width="30" src="/media/{{ ad.image }}" alt="" />
-                        {{ ad.ad_type.name }} {{ ad.ad_type.width }}x{{ ad.ad_type.height }}
-                    </a>({{ ad.views }}/{{ ad.clicks }}), {{ ad.cpc_price }}, {{ ad.cpm_price }}
-                    <br/>
-                    <a href="{% url 'admin_advertising_remove_ad' ad.id %}" class="danger">Remove ad</a>
-                    <br>
+                    <div class="advertising-items">
+                        <a href="/media/{{ ad.image }}" class="advertising-image" target="_blank">
+                            <img class="ads-thumb" width="30" src="/media/{{ ad.image }}" alt="" />
+                            {{ ad.ad_type.name }} {{ ad.ad_type.width }}x{{ ad.ad_type.height }}
+                        </a>({{ ad.views }}/{{ ad.clicks }}), {{ ad.cpc_price }}, {{ ad.cpm_price }}
+                        <br/>
+                        <a href="{% url 'admin_advertising_remove_ad' ad.id %}" class="danger">Remove ad</a>
+                    </div>
                 {% endfor %}
             </td>
             <td>{{ campaign.ammount_spent }}</td>
