--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -671,10 +671,14 @@
     width: 155px;
 }
 
+.native-region-combobox input {
+    width: 100%;
+}
+
 .native-region-combobox .ui-button {
     position:absolute;
     top: 3px;
-    right: 0px;
+    right: -14px;
     width: 20px;
     height: 20px;
     background: url("/static/images/widgets/dropdown.png") no-repeat;
