--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -512,6 +512,7 @@
                                 <div class='full-screen-popup' data-thumb-width="180" data-thumb-height="180">
                                     {{ form.cropping }}
                                     <div class='save-button'>Save image</div>
+                                    <div class='cancel-button'>Cancel</div>
                                 </div>
                                 <div class="picture-thumb">
                                     <img src="" class="preview">
