--- a/alpha/event/templates/events/list/short_single_event.html
+++ b/alpha/event/templates/events/list/short_single_event.html
@@ -1,26 +1,25 @@
 {% load date_formatting %}
 {% load cropping %}
 
-
-<div class="entry-img-prev">
-    {% if event.picture %}
-        <img src="{% cropped_thumbnail event.base "cropping" width=60 %}" height="60px" weight="60px">
-    {% else %}
-        <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
-    {% endif %}
-</div>
-<div class="entry-details-wrapper">
-    <div class="title">
-        <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
+<a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
+    <div class="entry-img-prev">
+        {% if event.picture %}
+            <img src="{% cropped_thumbnail event.base "cropping" width=60 %}" height="60px" weight="60px" />
+        {% else %}
+            <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px" />
+        {% endif %}
+    </div>
+    <div class="entry-details-wrapper">
+        <div class="title">
             {{ event.name }}
-        </a>                    
+        </div>
+        <div class="entry-date">
+            {{event.start_time|date:"l, F d, Y"}}
+            <span class="delimeter">|</span>
+            {{event.start_time|just_time}} - {{event.end_time|just_time}}
+        </div>
+        <div class="entry-description">
+            {{ event.venue.name }}, {% if event.venue.street %}{% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
+        </div>
     </div>
-    <div class="entry-date">
-        {{event.start_time|date:"l, F d, Y"}}
-        <span class="delimeter">|</span>
-        {{event.start_time|just_time}} - {{event.end_time|just_time}}
-    </div>
-    <div class="entry-description">
-        {{ event.venue.name }}, {% if event.venue.street %}{% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
-    </div>
-</div>
+</a>
