--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -7,11 +7,13 @@
 {% for event in events %}
     <div class="event-details-block" data-no-turbolink>
         <div class="event-img">
-            {% if event.picture %}
-                <img src="{% cropped_thumbnail event.event "cropping" width=175 %}" height="175px" weight="175px">
-            {% else %}
-                <img src="{{STATIC_URL}}images/default-event.jpg" height="175px" weight="175px">
-            {% endif %}
+            <a href="{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}">
+                {% if event.picture %}
+                    <img src="{% cropped_thumbnail event.event "cropping" width=175 %}" height="175px" weight="175px">
+                {% else %}
+                    <img src="{{STATIC_URL}}images/default-event.jpg" height="175px" weight="175px">
+                {% endif %}
+            </a>
         </div>
         <div class="event-details">
             <div class="title-wrapper">
