--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -136,7 +136,7 @@
                     <!-- end errors -->
 
                     {{ form.linking_venue_mode }}
-                    <table>
+                    <table class="create-event-table">
                         <tr>
                             <td class="create-event-td">
                                 Event Name
@@ -296,6 +296,11 @@
                                 
                             </td>
                             <td>
+                                <div class="warn description-warn">
+                                    Your description is too long.<br> 
+                                    Recommended length is less than <span class="description-recommended-length">400</span> symbols.<br>
+                                    Your current description length is <span class="description-length">0</span> symbols.
+                                </div>
                                 {{form.description}}
                                 {{form.description_json}}
                             </td>                                            
