--- a/alpha/event/static/styles/widgets.css
+++ b/alpha/event/static/styles/widgets.css
@@ -103,6 +103,10 @@ div.checkbox {
     vertical-align: middle;  
 }
 
+div.checkbox.block {
+    display: block;
+}
+
 div.checkbox.disabled {
     opacity: 0.3;
 }
